--- a/estilos/style.css
+++ b/estilos/style.css
@@ -16,3 +16,9 @@ main {
     padding: 10px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.452);
 }
+
+h1 {
+font-size: 20px;
+font-style: initial;
+background-color: rgba(221, 73, 15, 0.733);
+}
